# Hikari

./: CMakeLists.txt  LICENSE  README.md
include/: hk_icd.h  hk_layer.h
src/: CMakeLists.txt
src/icd/cpu/: device.cpp  global.cpp  instance.cpp  objects.h  physical_device.cpp  procaddr.cpp
src/layer/HK_LAYER_STD_validation/: global.cpp  instance.cpp  instanceprocaddr.cpp  layer.h
src/loader/: device.cpp  device.h  extension.cpp  icd.cpp  icd.h  instance.cpp  instance.h  layer.cpp  layer.h  physical_device.cpp  physical_device.h  terminator.cpp  terminator.h  utils.h
src/utils/: dispatch_table_helper.h  layer_utils.c  layer_utils.h  spec_def.h
tests/: CMakeLists.txt  test_init.cpp
tools/: CMakeLists.txt  header_generator.py  icd_definition_generator.py  spec.json
